<resources>

    <string name="app_name">WidgetsExamples</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_button_examples">ButtonExamples</string>
    <string name="with_onclick_listener">With onClickListener</string>
    <string name="with_onclick_attribute">Attribute onClick</string>
    <string name="description">Description</string>
    <string name="close">Close</string>
    <string name="borderless_button">Borderless button</string>
    <string name="title_activity_edit_texts_examples">Edit Texts Examples</string>
    <string name="normal_edit_text">Normal Edit Text</string>
    <string name="password">Password</string>
    <string name="person_name">Person name</string>
    <string name="email">Email</string>
    <string name="multiline">Multiline</string>
    <string name="date">Date</string>
    <string name="decimal">Decimal number</string>
    <string name="autocompleting_cities">Autocomple cities</string>
    <string name="title_activity_checkboxes_example">Checkboxes Example</string>
    <string name="spoken_languages">Spoken languages</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="title_activity_radio_buttons_example">Radio Buttons Example</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>

    <string-array name="cities_array">
        <item>Armenia</item>
        <item>Quimbaya</item>
        <item>Montenegro</item>
        <item>Pijao</item>
        <item>Salento</item>
        <item>Filandia</item>
        <item>Calarcá</item>
        <item>Circasia</item>
    </string-array>

    <string name="title_activity_toggles_button_examples">TogglesButtonExamples</string>
    <string name="vibration_off">Vibration OFF</string>
    <string name="vibration_on">Vibration ON</string>
    <string name="sex">Sex</string>
    <string name="title_activity_spinner_example">SpinnerExample</string>
    <string name="selected_city_is">Selected city is</string>
    <string name="there_is_no_selected_city">There is no selected city</string>
    <string name="title_activity_pickers_examples">PickersExamples</string>
    <string name="show_time_picker">Show time picker</string>
    <string name="show_date_picker">Show date picker</string>
    <string name="title_activity_option_menu_example">OptionMenuExample</string>
    <string name="click_menu">Click menu</string>
    <string name="action_was_selected">An action was selected</string>
    <string name="an_action">An action</string>
    <string name="title_activity_submenu_and_groups_examples">SubmenuAndGroupsExamples</string>
    <string name="title_activity_contextual_menu_example">ContextualMenuExample</string>
    <string name="search">Search</string>
    <string name="echo">echo</string>
    <string name="searching_for">Searching for</string>
    <string name="echoing">Echoing</string>
    <string name="with_oncheckedchanged">With onCheckedChanged</string>

</resources>