<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spoken_languages"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/checkBoxSpanish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkBoxClick"
        android:text="@string/spanish" />

    <CheckBox
        android:id="@+id/checkBoxEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkBoxClick"
        android:text="@string/english" />

    <CheckBox
        android:id="@+id/checkBoxFrench"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkBoxClick"
        android:text="@string/french" />

    <CheckBox
        android:id="@+id/checkBoxGerman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkBoxClick"
        android:text="@string/german" />


</LinearLayout>